--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.application.name=to-do-list
 
-# Port Configuration
-server.port = 8080
+# Configuration Port
+server.port=8080
 
 # Database Configuration
 spring.datasource.username = postgres
 spring.datasource.password = postgres
 spring.datasource.url = jdbc:postgresql://localhost:5432/to_do_list
-spring.datasource.driver-class-name = org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # JPA Config
 spring.jpa.hibernate.ddl-auto = update
