--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ server.port=8080
 
 # Database Configuration
 spring.datasource.username = postgres
-spring.datasource.password = postgres
-spring.datasource.url = jdbc:postgresql://localhost:5432/to_do_list
+spring.datasource.password = FMbjJqKZgqSZcpUuysCRTvhCyRYlSQnF
+spring.datasource.url = jdbc:postgresql://postgres.railway.internal:5432/railway
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
