--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=to-do-list
 server.port=8080
 
 # Database Configuration
-spring.datasource.username = te-do-list_owner
-spring.datasource.password = DJNPt78QFHbX
-spring.datasource.url = jdbc:postgresql://ep-sparkling-feather-a1q3f9g9.ap-southeast-1.aws.neon.tech/te-do-list?sslmode=require
+spring.datasource.username = ${DB_USERNAME}
+spring.datasource.password = ${DB_PASSWORD}
+spring.datasource.url = jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}?createDatabaseIfNotExist=true
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
